--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -39,6 +39,7 @@
         heigth: 393px
         background-color: #e5e5e5
         border-radius: 2rem
-        border: 1px solid green 
+        border: 1px solid red  
+        
     
     
