--- a/styles/sass/_mixins.sass
+++ b/styles/sass/_mixins.sass
@@ -1,7 +1,6 @@
 @mixin card  
-    width: 342
-    height: 437
-    border: 1px solid black
-    background-color: #ccc
+    width: 342px
+    height: 437px
+    background-color: #777070
     
 
