--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -33,9 +33,9 @@
         .mentors
             width: 90%
             height: 90%
-            border: 1px solid green
-            background-color: blue  
             
+
+            display: flex
 
 
             .mentors-card
