--- a/styles/css/style-aside.css
+++ b/styles/css/style-aside.css
@@ -6,37 +6,38 @@
 }
 .menu .profile {
   width: 100%;
-  height: 19.5vh;
-  display: flex;
-}
-.menu .profile-image {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.menu .profile-image img {
-  border-radius: 50%;
-  width: 70%;
-  height: 70%;
-  background-color: #8f8f8f;
-  margin: 2rem;
-}
-.menu .profile-info {
-  width: 50%;
-  height: 100%;
+  height: 40%;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-self: flex-start;
+}
+.menu .profile img {
+  border-radius: 50%;
+  width: 7rem;
+  height: 7rem;
+  background-color: #8f8f8f;
+  margin: 2rem auto;
+}
+.menu .profile-info {
+  width: auto;
+  height: auto;
+  text-align: center;
 }
 .menu .nav {
-  width: 286px;
-  heigth: 393px;
-  background-color: #e5e5e5;
-  border-radius: 2rem;
-  border: 1px solid green;
+  border: 1px solid blue;
+  width: 80%;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.menu .nav-item {
+  text-align: center;
+}
+.menu .nav-item-icon {
+  width: 100px;
+  height: 100px;
 }
 
 /*# sourceMappingURL=style-aside.css.map */
