--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -6,40 +6,47 @@
 
     .profile
         width: 100%
-        height: 19.5vh
+        height: 40%
+        box-sizing: border-box
+        
 
         display: flex
+        flex-direction: column
 
-        &-image
-            width: 50%
-            height: 100%
-            
-            display: flex
-            justify-content: center
-            align-items: center
         
-        &-image img
+        img
             border-radius: 50%
-            width: 70%
-            height: 70%
+            width: 7rem
+            height: 7rem
             background-color: #8f8f8f
-            margin: 2rem
+            margin: 2rem auto
 
         &-info
-            width: 50%
-            height: 100%
-
-            display: flex
-            flex-direction: column
-            justify-content: center
-            align-self: flex-start
-
+            width: auto
+            height: auto 
+            text-align: center
+    
     .nav
-        width: 286px
-        heigth: 393px
-        background-color: #e5e5e5
-        border-radius: 2rem
-        border: 1px solid red  
+        border: 1px solid blue  
+        width: 80%
+        height: 20rem
+
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: space-around
+
+        &-item
+            text-align: center
+
+            &-icon
+                width: 100px
+                height: 100px
+
+
+
+            
+
         
     
     
