--- a/styles/css/mentor-profile.css
+++ b/styles/css/mentor-profile.css
@@ -1,10 +1,31 @@
-.mentor-profile-name {
-  font-size: 1rem;
+.main-header .cover-image {
+  display: none;
 }
 @media (min-width: 920px) {
-  .mentor-profile-name {
-    color: blue;
+  .main-header .cover-image {
+    display: inline;
   }
+}
+
+.mentor-profile-image {
+  width: 50%;
+  max-width: 15rem;
+  max-height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+.mentor-profile-image img {
+  border-radius: 50%;
+  width: 70%;
+  height: 70%;
+  margin: 2rem;
+}
+.mentor-profile-main-div {
+  padding: 1.6rem;
+  text-align: center;
 }
 
 /*# sourceMappingURL=mentor-profile.css.map */
