--- a/styles/sass/mentor-profile.sass
+++ b/styles/sass/mentor-profile.sass
@@ -1,5 +1,8 @@
 @use 'responsive-mixin'
 
+body
+   margin: 1.6rem
+
 .main-header
    .cover-image
       display: none
@@ -7,6 +10,10 @@
          display: inline
 
 .mentor-profile
+   background-color: yellow
+   padding: 7.7rem 3.8rem 4.2rem 3.8rem
+   border-radius: 1rem
+
    &-image
       width: 50%
       max-width: 15rem
@@ -23,6 +30,26 @@
       height: 70%
       margin: 2rem
 
-   &-main-div
-      padding: 1.6rem
-      text-align: center
+   &-job-role 
+      padding-bottom: 1rem 
+   
+   &-qualification
+      padding: 2rem 0
+
+   &-social-media
+      padding-top: 2rem
+
+.schedule 
+   &-button
+      padding: 1.35rem 1.65rem
+      width: 20.2rem
+      border-radius: 1rem
+      margin-top: 6.2rem
+      margin-bottom: 6.5rem
+      
+
+
+
+
+
+
