basic structure of mentor-profile, about and habilities

--- a/styles/css/mentor-profile.css
+++ b/styles/css/mentor-profile.css
@@ -1,5 +1,7 @@
 body {
   margin: 1.6rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
 .main-header .cover-image {
@@ -12,7 +14,7 @@ body {
 }
 
 .mentor-profile {
-  background-color: yellow;
+  background-color: #F0EDED;
   padding: 7.7rem 3.8rem 4.2rem 3.8rem;
   border-radius: 1rem;
 }
@@ -48,6 +50,50 @@ body {
   border-radius: 1rem;
   margin-top: 6.2rem;
   margin-bottom: 6.5rem;
+  background-color: black;
+  color: white;
+}
+
+.mentor-profile-platform-title {
+  margin-top: 3.2rem;
+  margin-bottom: 1.8rem;
+}
+
+.about {
+  text-align: left;
+}
+.about-title {
+  font-weight: 700;
+  margin-top: 5.2rem;
+  margin-bottom: 1.2rem;
+}
+.about-biografy {
+  margin-bottom: 1.2rem;
+  font-weight: 300;
+}
+.about .skills-list-title {
+  margin-bottom: 1.2rem;
+  font-weight: 700;
+}
+.about .skills-list-topic {
+  display: inline-block;
+  margin-bottom: 1.2rem;
+  margin-right: 1.3rem;
+  background-color: #C4C4C4;
+  padding: 0.6rem 2rem;
+  border-radius: 0.5rem;
+}
+
+.schedule-title {
+  text-align: left;
+  font-weight: 700;
+  margin-top: 3.2rem;
+}
+.schedule-title-table {
+  background-color: #585858;
+  color: white;
+  margin-top: 1.2rem;
+  padding: 0.8rem;
 }
 
 /*# sourceMappingURL=mentor-profile.css.map */
