--- a/styles/sass/mentor-profile.sass
+++ b/styles/sass/mentor-profile.sass
@@ -2,6 +2,8 @@
 
 body
    margin: 1.6rem
+   font-family: 'Montserrat', sans-serif
+   font-weight: 500
 
 .main-header
    .cover-image
@@ -10,7 +12,7 @@ body
          display: inline
 
 .mentor-profile
-   background-color: yellow
+   background-color: #F0EDED
    padding: 7.7rem 3.8rem 4.2rem 3.8rem
    border-radius: 1rem
 
@@ -46,10 +48,46 @@ body
       border-radius: 1rem
       margin-top: 6.2rem
       margin-bottom: 6.5rem
-      
+      background-color: black
+      color: white
+
+.mentor-profile-platform //platforms icons 
+   &-title
+      margin-top: 3.2rem
+      margin-bottom: 1.8rem
+
+.about
+   text-align: left
+   &-title 
+      font-weight: 700
+      margin-top: 5.2rem
+      margin-bottom: 1.2rem
+   &-biografy
+      margin-bottom: 1.2rem
+      font-weight: 300
+   .skills-list
+      &-title
+         margin-bottom: 1.2rem
+         font-weight: 700
+      &-topic
+         display: inline-block
+         margin-bottom: 1.2rem
+         margin-right: 1.3rem
+         background-color: #C4C4C4
+         padding: .6rem 2rem
+         border-radius: .5rem
+
+.schedule
+   &-title
+      text-align: left
+      font-weight: 700
+      margin-top:3.2rem
+
+      &-table 
+         background-color: #585858
+         color: white
+         margin-top: 1.2rem
+         padding:.8rem
 
 
-
-
-
-
+         
