--- a/styles/sass/mentor-profile.sass
+++ b/styles/sass/mentor-profile.sass
@@ -83,11 +83,19 @@ body
       font-weight: 700
       margin-top:3.2rem
 
-      &-table 
-         background-color: #585858
-         color: white
-         margin-top: 1.2rem
-         padding:.8rem
+   &-table 
+      padding:.8rem
+      border: .1rem solid rgba(0, 0, 0, 0.4)
+      margin: 0 auto
+
+      .schedule-day
+         padding: .5rem 2rem
+      
+      .schedule-time
+         border: .1rem solid rgba(0, 0, 0, 0.4)
+
+
+
 
 
          
