--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -1,35 +1,36 @@
-.grid-main {
-  display: grid;
-  grid-template-columns: 15.3vw 82vw;
-  grid-template-rows: 19.5vh 78vh;
-  grid-gap: 2vh 2vw;
-}
-.grid-main .menu {
-  background-color: #ccc;
-  grid-column: 1/2;
-  grid-row: 1/3;
-}
-.grid-main .research {
-  border: 1px solid blue;
-  grid-column: 2/3;
-  grid-rows: 1/2;
-}
-.grid-main .main {
-  border: 1px solid red;
-  grid-column: 2/3;
-  grid-row: 2/3;
-  display: flex;
-}
-.grid-main .main .mentors {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-}
-.grid-main .main .mentors-header {
-  border: 1px solid black;
-  width: 100%;
-  height: 3rem;
+@media (min-width: 920px) {
+  .grid-main {
+    display: grid;
+    grid-template-columns: 15.3vw 82vw;
+    grid-template-rows: 19.5vh 78vh;
+    grid-gap: 2vh 2vw;
+  }
+  .grid-main .menu {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .grid-main .research {
+    border: 1px solid blue;
+    grid-column: 2/3;
+    grid-rows: 1/2;
+  }
+  .grid-main .main {
+    border: 1px solid red;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: flex;
+  }
+  .grid-main .main .mentors {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .grid-main .main .mentors-header {
+    border: 1px solid black;
+    width: 100%;
+    height: 3rem;
+  }
 }
 
 /*# sourceMappingURL=style-index.css.map */
