--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -1,17 +1,27 @@
+@use 'responsive-mixin'
+//MENU LATERAL E PERFIL DO USUÁRIO
 .menu
+    display: block
+
     background-color: #ccc
     display: flex
     flex-direction: column
     align-items: center
 
+    //INFORMAÇÕES OCULTAS
+    #nav-btn
+        display: none
+
+    // INFORMAÇÕES DO USUÁRIO
     .profile
         width: 100%
         height: 40%
         box-sizing: border-box
-        
 
         display: flex
         flex-direction: column
+        align-items: center
+        
 
         
         img
@@ -26,6 +36,7 @@
             height: auto 
             text-align: center
     
+    //NAVEGADOR DAS PÁGINAS (MENU)
     .nav
         border: 1px solid blue  
         width: 80%
@@ -35,9 +46,15 @@
         flex-direction: column
         align-items: center
         justify-content: space-around
+        
+        a
+            display: block
+            padding: .5rem
+            background-color: #eee
 
         &-item
             text-align: center
+
 
             &-icon
                 width: 100px
@@ -45,8 +62,7 @@
 
 
 
-            
+// FORMATO DESKTOP
 
-        
-    
-    
+
+                
