--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -1,43 +1,48 @@
 @use 'mixins'
+@use 'responsive-mixin'
 
+
+
+// DESKTOP
 .grid-main
-    display: grid
+    @include responsive-mixin.desktop
+    
+        display: grid
 
-    grid-template-columns: 15.3vw 82vw
-    grid-template-rows: 19.5vh 78vh
-    grid-gap: 2vh 2vw
+        grid-template-columns: 15.3vw 82vw
+        grid-template-rows: 19.5vh 78vh
+        grid-gap: 2vh 2vw
 
-    .menu
-        background-color: #ccc
+        .menu
 
-        grid-column: 1 / 2
-        grid-row: 1 /3
+            grid-column: 1 / 2
+            grid-row: 1 /3
 
-    .research
-        border: 1px solid blue 
+        .research
+            border: 1px solid blue 
 
-        grid-column: 2 / 3
-        grid-rows: 1 / 2
+            grid-column: 2 / 3
+            grid-rows: 1 / 2
 
-    .main
-        border: 1px solid red  
+        .main
+            border: 1px solid red  
 
-        grid-column: 2 / 3
-        grid-row: 2 / 3
+            grid-column: 2 / 3
+            grid-row: 2 / 3
 
-        display: flex
-
-        .mentors
-            width: 100%
-            height: auto
-             
             display: flex
-            flex-wrap: wrap
 
-            &-header
-                border: 1px solid black
+            .mentors
                 width: 100%
-                height: 3rem
+                height: auto
+                    
+                display: flex
+                flex-wrap: wrap
+
+                &-header
+                    border: 1px solid black
+                    width: 100%
+                    height: 3rem
 
 
 
