--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -1,5 +1,35 @@
+/* MOBILE */
+.grid-main {
+  padding: 0 16px;
+}
+.grid-main .research {
+  border: 1px solid blue;
+  width: 100%;
+  height: 11rem;
+}
+.grid-main .menu {
+  border: 1px solid green;
+  position: absolute;
+  top: 0;
+}
+.grid-main .main {
+  border: 2px solid yellow;
+  width: 100%;
+  height: auto;
+}
+.grid-main .main .mentors {
+  width: 100%;
+  height: auto;
+  border: 1px solid orange;
+}
+.grid-main .main .mentors-card {
+  border: 1px solid black;
+  max-width: 250px;
+  width: 100%;
+}
 @media (min-width: 920px) {
   .grid-main {
+    padding: 0;
     display: grid;
     grid-template-columns: 15.3vw 82vw;
     grid-template-rows: 19.5vh 78vh;
