--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -2,41 +2,85 @@
 @use 'responsive-mixin'
 
 /* MOBILE */
+body
+    margin: 0 auto
+    padding: 0
+    box-sizing: border-box
+   
 .grid-main 
-    padding: 0 16px
-
+    width: 100%
     .research
         border: 1px solid blue
         width: 100%
         height: 11rem
+        width: 100%
+        
+        display: flex
+        flex-direction: column
+        align-items: center
+
+        
+        &-search
+            width: 100%
 
     
     .menu
-        border: 1px solid green
-
         position: absolute
         top: 0
 
 
 
     .main
-        border: 2px solid yellow
+        border: 1px solid green
         width: 100%
         height: auto
 
+        
 
     
         .mentors
-            width: 100%
             height: auto
-            border: 1px solid orange
+            
 
-
+            display: flex
+            flex-flow: row wrap
+            justify-content: center
 
             &-card
                 border: 1px solid black 
-                max-width: 250px
                 width: 100%
+                max-width: 350px
+                height: 440px
+                padding: 16px
+                border-radius: .6rem
+                margin-bottom: 1rem
+                box-sizing: border-box
+
+                &-img
+                    width: 100%
+                    height: 14.3rem
+                    border: 1px solid red
+                    border-radius: .6rem .6rem 0 0
+                    background-image: url("/assets/img/perfil mulher.jpg")
+                    background-position: center
+                    background-repeat: no-repeat
+                    background-size: 24rem
+                    box-sizing: border-box
+                    overflow: hidden
+                
+                &-description
+                    border: 1px solid green 
+                    width: 100%
+                    height: auto
+
+                    &-specialty
+                        display: flex
+
+
+
+
+
+
 
 
 
@@ -50,7 +94,7 @@
         display: grid
 
         grid-template-columns: 15.3vw 82vw
-        grid-template-rows: 19.5vh 78vh
+        grid-template-rows: 19.5vh auto
         grid-gap: 2vh 2vw
 
         .menu
@@ -59,21 +103,22 @@
             grid-row: 1 /3
 
         .research
-            border: 1px solid blue 
+            border: 1px solid blue
 
             grid-column: 2 / 3
             grid-rows: 1 / 2
 
         .main
-            border: 1px solid red  
+            border: 1px solid red 
+            height: auto 
 
             grid-column: 2 / 3
             grid-row: 2 / 3
 
             display: flex
+            flex-direction: row
 
             .mentors
-                width: 100%
                 height: auto
                     
                 display: flex
@@ -81,7 +126,6 @@
 
                 &-header
                     border: 1px solid black
-                    width: 100%
                     height: 3rem
 
 
