--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -25,7 +25,6 @@ body {
   top: 0;
 }
 .grid-main .main {
-  border: 1px solid green;
   width: 100%;
   height: auto;
 }
@@ -37,7 +36,7 @@ body {
 }
 .grid-main .main .mentors-card {
   width: 100%;
-  max-width: 350px;
+  max-width: 300px;
   height: 440px;
   margin: 16px;
   background-color: #eee;
@@ -48,7 +47,7 @@ body {
   display: flex;
   flex-direction: column;
 }
-.grid-main .main .mentors-card h3 {
+.grid-main .main .mentors-card-name {
   font-size: 20px;
   margin-top: 0.5rem;
   margin-bottom: 0.7rem;
@@ -56,10 +55,17 @@ body {
 .grid-main .main .mentors-card h4 {
   margin-bottom: 0.3rem;
 }
+@media (min-width: 920px) {
+  .grid-main .main .mentors-card {
+    max-width: 462px;
+    max-height: 440px;
+    display: flex;
+    flex-flow: row wrap;
+  }
+}
 .grid-main .main .mentors-card-img {
   width: 100%;
   height: 14.3rem;
-  border: 1px solid red;
   border-radius: 0.6rem 0.6rem 0 0;
   background-image: url("/assets/img/perfil mulher.jpg");
   background-position: center;
@@ -69,7 +75,6 @@ body {
   overflow: hidden;
 }
 .grid-main .main .mentors-card-description {
-  border: 1px solid green;
   width: 100%;
   height: auto;
 }
