--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -3,82 +3,70 @@
 
 
 .menu
-    /*MOBILE*/
     width: auto
     height: auto
 
     #nav-btn
         margin: 1rem
+        @include responsive-mixin.desktop
+            display: none
         
 
     #nav-menu
         display: none
 
-
-
-
-
-    
-    /*DESKTOP*/
-    @include responsive-mixin.desktop
-        display: block
-
-        background-color: #ccc
-        display: flex
-        flex-direction: column
-        align-items: center
-
-        //INFORMAÇÕES OCULTAS
-        #nav-btn
-            display: none
-
-        // INFORMAÇÕES DO USUÁRIO
-        .profile
-            width: 100%
-            height: 40%
-            box-sizing: border-box
-
+        @include responsive-mixin.desktop
+            display: block
+            background-color: #ccc
             display: flex
             flex-direction: column
             align-items: center
+                
+
+            // INFORMAÇÕES DO USUÁRIO
+            .profile
+                width: 100%
+                height: 40%
+                box-sizing: border-box
+
+                display: flex
+                flex-direction: column
+                align-items: center
+                
+                img
+                    border-radius: 50%
+                    width: 7rem
+                    height: 7rem
+                    background-color: #8f8f8f
+                    margin: 2rem auto
+
+                &-info
+                    width: auto
+                    height: auto 
+                    text-align: center
             
+            //NAVEGADOR DAS PÁGINAS (MENU)
+            .nav  
+                width: 80%
+                height: 20rem
+                margin-top: 2rem
 
-            
-            img
-                border-radius: 50%
-                width: 7rem
-                height: 7rem
-                background-color: #8f8f8f
-                margin: 2rem auto
+                display: flex
+                flex-direction: column
+                align-items: center
+                justify-content: space-around
+                
+                a
+                    display: block
+                    padding: .5rem
+                    background-color: #eee
 
-            &-info
-                width: auto
-                height: auto 
-                text-align: center
-        
-        //NAVEGADOR DAS PÁGINAS (MENU)
-        .nav
-            border: 1px solid blue  
-            width: 80%
-            height: 20rem
+                &-item
+                    text-align: center
 
-            display: flex
-            flex-direction: column
-            align-items: center
-            justify-content: space-around
-            
-            a
-                display: block
-                padding: .5rem
-                background-color: #eee
-
-            &-item
-                text-align: center
-
-
-                &-icon
-                    width: 100px
-                    height: 100px
+                    &-icon
+                        width: 100px
+                        height: 100px
 
 
                 
