--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -31,13 +31,11 @@ body
 
 
     .main
-        border: 1px solid green
         width: 100%
         height: auto
     
         .mentors
             height: auto
-            
 
             display: flex
             flex-flow: row wrap
@@ -45,7 +43,7 @@ body
 
             &-card 
                 width: 100%
-                max-width: 350px
+                max-width: 300px
                 height: 440px
                 margin: 16px
                 background-color: #eee
@@ -58,19 +56,24 @@ body
                 display: flex
                 flex-direction: column
 
-                h3
+                &-name
                     font-size: 20px
                     margin-top: .5rem
                     margin-bottom: .7rem
                 
                 h4
                     margin-bottom: .3rem
-                    
+                
+                @include responsive-mixin.desktop
+                    max-width: 462px
+                    max-height: 440px
+
+                    display: flex
+                    flex-flow: row wrap
 
                 &-img
                     width: 100%
                     height: 14.3rem
-                    border: 1px solid red
                     border-radius: .6rem .6rem 0 0
                     background-image: url("/assets/img/perfil mulher.jpg")
                     background-position: center
@@ -79,8 +82,7 @@ body
                     box-sizing: border-box
                     overflow: hidden
                 
-                &-description
-                    border: 1px solid green 
+                &-description 
                     width: 100%
                     height: auto
 
