--- a/styles/css/style-aside.css
+++ b/styles/css/style-aside.css
@@ -1,9 +1,16 @@
+@charset "UTF-8";
 .menu {
   width: auto;
   height: auto;
 }
 .menu #nav-btn {
-  margin: 1rem;
+  width: 4rem;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+}
+.menu #nav-btn img {
+  margin: 0.4rem;
 }
 @media (min-width: 920px) {
   .menu #nav-btn {
@@ -20,10 +27,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
   }
   .menu #nav-menu .profile {
     width: 100%;
-    height: 40%;
+    height: 18rem;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -43,7 +51,7 @@
   }
   .menu #nav-menu .nav {
     width: 80%;
-    height: 20rem;
+    height: 30rem;
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
@@ -62,6 +70,9 @@
     width: 100px;
     height: 100px;
   }
+}
+.menu #nav-menu:hover {
+  /*adicionar todo o conteúdo do nav-meu aqui e fazer a dedição na parte de cima */
 }
 
 /*# sourceMappingURL=style-aside.css.map */
