--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -7,7 +7,16 @@
     height: auto
 
     #nav-btn
-        margin: 1rem
+        width: 4rem
+        height: 4rem
+        
+        display: flex
+        justify-content: center
+
+        img
+            margin: .4rem
+
+        
         @include responsive-mixin.desktop
             display: none
         
@@ -21,12 +30,13 @@
             display: flex
             flex-direction: column
             align-items: center
-                
+
+            height: 100%
 
             // INFORMAÇÕES DO USUÁRIO
             .profile
                 width: 100%
-                height: 40%
+                height: 18rem
                 box-sizing: border-box
 
                 display: flex
@@ -48,9 +58,8 @@
             //NAVEGADOR DAS PÁGINAS (MENU)
             .nav  
                 width: 80%
-                height: 20rem
+                height: 30rem
                 margin-top: 2rem
-
                 display: flex
                 flex-direction: column
                 align-items: center
@@ -68,5 +77,7 @@
                         width: 100px
                         height: 100px
 
+    #nav-menu:hover
+        /*adicionar todo o conteúdo do nav-meu aqui e fazer a dedição na parte de cima */
 
                 
