--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -9,6 +9,16 @@ body
    
 .grid-main 
     width: 100%
+
+    @include responsive-mixin.desktop
+        padding: 0
+        
+        display: grid
+
+        grid-template-columns: 12.8% auto
+        grid-template-rows: auto auto
+        grid-gap: 1rem
+
     .research
         border: 1px solid blue
         width: 100%
@@ -19,6 +29,12 @@ body
         flex-direction: column
         align-items: center
 
+        @include responsive-mixin.desktop
+            border: 1px solid blue
+
+            grid-column: 2 / 3
+            grid-rows: 1 / 2
+
         
         &-search
             width: 100%
@@ -27,6 +43,12 @@ body
     .menu
         position: absolute
         top: 0
+
+        @include responsive-mixin.desktop
+            position: relative
+
+            grid-column: 1 / 2
+            grid-row: 1 /3
 
 
 
@@ -109,18 +131,6 @@ body
 
         //DESKTOP
     @include responsive-mixin.desktop
-        padding: 0
-        
-        display: grid
-
-        grid-template-columns: 15.3vw 82vw
-        grid-template-rows: 19.5vh auto
-        grid-gap: 2vh 2vw
-
-        .menu
-
-            grid-column: 1 / 2
-            grid-row: 1 /3
 
         .research
             border: 1px solid blue
