sucess card of button added and the start of table's style

--- a/styles/css/mentor-profile.css
+++ b/styles/css/mentor-profile.css
@@ -2,6 +2,7 @@ body {
   margin: 1.6rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
+  box-sizing: border-box;
 }
 
 .main-header .cover-image {
@@ -18,6 +19,14 @@ body {
   padding: 7.7rem 3.8rem 4.2rem 3.8rem;
   border-radius: 1rem;
   position: relative;
+  box-sizing: border-box;
+  width: 343px;
+  height: 300px;
+}
+@media (min-width: 920px) {
+  .mentor-profile {
+    background-color: blue;
+  }
 }
 .mentor-profile-image {
   background-image: url(../../assets/img/profile.jfif);
@@ -39,16 +48,6 @@ body {
 }
 .mentor-profile-social-media {
   padding-top: 2rem;
-}
-
-.schedule-button {
-  padding: 1.35rem 1.65rem;
-  width: 20.2rem;
-  border-radius: 1rem;
-  margin-top: 6.2rem;
-  margin-bottom: 6.5rem;
-  background-color: black;
-  color: white;
 }
 
 .mentor-profile-platform-title {
@@ -86,16 +85,51 @@ body {
   font-weight: 700;
   margin-top: 3.2rem;
 }
-.schedule-table {
-  padding: 0.8rem;
-  border: 0.1rem solid rgba(0, 0, 0, 0.4);
-  margin: 0 auto;
+.schedule-month-year {
+  border-top: 1px solid rgba(0, 0, 0, 0.4);
+  border-right: 1px solid rgba(0, 0, 0, 0.4);
+  border-left: 1px solid rgba(0, 0, 0, 0.4);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  background-color: #585858;
+  color: white;
+  padding: 1rem;
 }
-.schedule-table .schedule-day {
+.schedule-table {
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  padding: 0;
+  height: 275px;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+.schedule table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0.9rem 1rem;
+  margin-top: -8px;
+}
+.schedule-day {
   padding: 0.5rem 2rem;
 }
-.schedule-table .schedule-time {
-  border: 0.1rem solid rgba(0, 0, 0, 0.4);
+.schedule-time {
+  background-color: #C4C4C4;
+  padding: 0.4rem;
+  border-radius: 0.5rem;
+}
+.schedule-button {
+  padding: 1.35rem 1.65rem;
+  width: 20.2rem;
+  border-radius: 1rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  background-color: black;
+  color: white;
+  box-sizing: border-box;
+}
+.schedule-button-sucess {
+  padding: 3.1rem 1.2rem;
+  background-color: #C4C4C4;
+  border-radius: 1rem;
 }
 
 /*# sourceMappingURL=mentor-profile.css.map */
