--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -1,14 +1,39 @@
+body
+   margin: 1.6rem
+   font-family: 'Montserrat', sans-serif
+   font-weight: 500
+   box-sizing: border-box
+
 .form-profile
    background-color: #E5E5E5
+   margin: 0 auto
+   box-sizing: border-box
+         
+   #change-photo
+      display: block
+      text-align: center
+      color: black
+      padding-top: 1.6rem
+
    input 
       display: block
       padding: 1.3rem 1.2rem
       justify-content: left
       border: 1px solid #716C6C
       border-radius: .6rem
-      
-   #change-photo
-      display: block
+      margin: 0 auto
+      margin-top:.5rem
+      width: 80%
 
    &-label
+      background-color: pink
+
+
+   .label-input
+      text-align: center
+      margin-top: 2.5rem
+
+   
+
+
       
