--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -8,6 +8,7 @@ body
    background-color: #E5E5E5
    margin: 0 auto
    box-sizing: border-box
+   border-radius: 1rem
          
    #change-photo
       display: block
@@ -25,15 +26,31 @@ body
       margin-top:.5rem
       width: 80%
 
-   &-label
-      background-color: pink
-
-
    .label-input
-      text-align: center
       margin-top: 2.5rem
+      text-align: center
+
+   .social-media-title 
+      font-weight: 600
+
+   #edit-profile-save
+      background-color: #5B5B5B
+      border-radius: 1rem
+      padding: 1rem 3.4rem
+      color: white 
+      font-width: 600
+
+.open-button
+   background-color: #E5E5E5
+   text-align: left
+   margin: 2.4rem 0
+   border-radius: 1rem
+   padding-top: .9rem 
+   padding-bottom: .9rem
+   padding-left: 1.6rem
+
 
    
-
+//font-width ainda n existe, é preciso pegar no google fonts e linkar nas páginas 
 
       
