--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -47,37 +47,64 @@
                     border-radius: 50%
                     width: 7rem
                     height: 7rem
-                    background-color: #8f8f8f
                     margin: 2rem auto
 
                 &-info
                     width: auto
                     height: auto 
                     text-align: center
+
+                    a
+                        color: black
             
             //NAVEGADOR DAS PÁGINAS (MENU)
             .nav  
                 width: 80%
-                height: 30rem
-                margin-top: 2rem
+                height: 50rem
+                margin-top: 6rem
                 display: flex
                 flex-direction: column
                 align-items: center
-                justify-content: space-around
+                justify-content: flex-start
                 
                 a
                     display: block
                     padding: .5rem
-                    background-color: #eee
+                    text-decoration: none
+                    color: black
 
                 &-item
                     text-align: center
+                    margin: 2rem auto
 
                     &-icon
                         width: 100px
                         height: 100px
+                    
+                #nav-item-out-line
+                   margin-top: 10rem
+
 
     #nav-menu:hover
-        /*adicionar todo o conteúdo do nav-meu aqui e fazer a dedição na parte de cima */
+        @include responsive-mixin.desktop
+        width: 40%
+
+        .profile 
+            img
+                border-radius: 50%
+                width: 80%
+                height: auto
+                margin: 2rem .3rem
+
+            &-info 
+                display: none
+
+        //NAVEGADOR DAS PÁGINAS (MENU)
+        .nav
+            a
+                h4
+                    display: none
+        
+
 
                 
