--- a/styles/css/edit-profile.css
+++ b/styles/css/edit-profile.css
@@ -1,15 +1,32 @@
 body {
-  margin: 1.6rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   box-sizing: border-box;
 }
 
+main {
+  margin: 1.6rem;
+}
+
 .form-profile {
   background-color: #E5E5E5;
-  margin: 0 auto;
+  margin: 12rem auto 2.4rem auto;
+  padding: 6.8rem 1.7rem 1.2rem 1.7rem;
   box-sizing: border-box;
   border-radius: 1rem;
+  position: relative;
+}
+.form-profile-image {
+  background-image: url(../../assets/img/profile.jfif);
+  background-size: cover;
+  background-position: center;
+  width: 50%;
+  border-radius: 50%;
+  max-width: 15rem;
+  height: 15rem;
+  margin: 2rem;
+  position: absolute;
+  top: -98px;
 }
 .form-profile #change-photo {
   display: block;
@@ -31,15 +48,21 @@ body {
   margin-top: 2.5rem;
   text-align: center;
 }
+.form-profile #about {
+  height: 145px;
+}
 .form-profile .social-media-title {
   font-weight: 600;
 }
-.form-profile #edit-profile-save {
-  background-color: #5B5B5B;
-  border-radius: 1rem;
+.form-profile .save-button {
+  display: block;
   padding: 1rem 3.4rem;
+  border-radius: 1rem;
+  margin: 2.2rem auto 2rem auto;
+  padding: 1rem 3.4rem;
+  background-color: #5B5B5B;
   color: white;
-  font-width: 600;
+  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
 }
 
 .open-button {
@@ -50,6 +73,14 @@ body {
   padding-top: 0.9rem;
   padding-bottom: 0.9rem;
   padding-left: 1.6rem;
+}
+
+.footer {
+  width: 100%;
+  background-color: #B1AAAA;
+  text-align: center;
+  padding-top: 0.6rem;
+  padding-bottom: 0.6rem;
 }
 
 /*# sourceMappingURL=edit-profile.css.map */
