--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -1,14 +1,31 @@
 body
-   margin: 1.6rem
    font-family: 'Montserrat', sans-serif
    font-weight: 500
    box-sizing: border-box
 
+main
+   margin: 1.6rem
+
 .form-profile
    background-color: #E5E5E5
-   margin: 0 auto
+   margin: 12rem auto 2.4rem auto
+   padding: 6.8rem 1.7rem 1.2rem 1.7rem
    box-sizing: border-box
    border-radius: 1rem
+   position: relative 
+
+   &-image 
+      background-image: url(../../assets/img/profile.jfif)
+      background-size: cover
+      background-position: center
+      width: 50%
+      border-radius: 50%
+      max-width: 15rem
+      height: 15rem
+      margin: 2rem
+      position: absolute
+      //left: 94px
+      top: -98px
          
    #change-photo
       display: block
@@ -30,15 +47,22 @@ body
       margin-top: 2.5rem
       text-align: center
 
+   #about
+      height: 145px
+
+
    .social-media-title 
       font-weight: 600
 
-   #edit-profile-save
-      background-color: #5B5B5B
-      border-radius: 1rem
+   .save-button
+      display: block
       padding: 1rem 3.4rem
-      color: white 
-      font-width: 600
+      border-radius: 1rem
+      margin: 2.2rem auto 2rem auto
+      padding: 1rem 3.4rem
+      background-color: #5B5B5B
+      color: white
+      border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133))
 
 .open-button
    background-color: #E5E5E5
@@ -49,8 +73,13 @@ body
    padding-bottom: .9rem
    padding-left: 1.6rem
 
+.footer
+   width: 100%
+   background-color: #B1AAAA
+   text-align: center
+   padding-top: .6rem
+   padding-bottom: .6rem
 
-   
-//font-width ainda n existe, é preciso pegar no google fonts e linkar nas páginas 
+
 
       
