--- a/styles/css/style-aside.css
+++ b/styles/css/style-aside.css
@@ -22,75 +22,100 @@
 @media (min-width: 920px) {
   .menu #nav-menu {
     display: block;
+    width: 40%;
     background-color: #ccc;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
+    transition-duration: 1s;
+    transform-origin: 0% 0%;
   }
   .menu #nav-menu .profile {
     width: 100%;
-    height: 18rem;
+    height: 15vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition-duration: 1s;
+    transform-origin: 0% 0%;
   }
   .menu #nav-menu .profile img {
     border-radius: 50%;
-    width: 7rem;
-    height: 7rem;
-    margin: 2rem auto;
+    width: 4.5rem;
+    height: auto;
+    margin: 2rem 0.3rem;
   }
   .menu #nav-menu .profile-info {
-    width: auto;
-    height: auto;
-    text-align: center;
-  }
-  .menu #nav-menu .profile-info a {
-    color: black;
+    display: none;
   }
   .menu #nav-menu .nav {
     width: 80%;
-    height: 50rem;
-    margin-top: 6rem;
+    height: 50vh;
+    margin-top: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
   }
-  .menu #nav-menu .nav a {
+  .menu #nav-menu .nav-item {
+    margin: 2rem auto;
+  }
+  .menu #nav-menu .nav-item a {
     display: block;
     padding: 0.5rem;
     text-decoration: none;
-    color: black;
   }
-  .menu #nav-menu .nav-item {
-    text-align: center;
-    margin: 2rem auto;
-  }
-  .menu #nav-menu .nav-item-icon {
-    width: 100px;
-    height: 100px;
+  .menu #nav-menu .nav-item a h4 {
+    display: none;
   }
   .menu #nav-menu .nav #nav-item-out-line {
-    margin-top: 10rem;
+    margin-top: 15vh;
   }
 }
 .menu #nav-menu:hover {
-  width: 40%;
+  display: block;
+  transition: all 0.5s ease-out;
 }
-.menu #nav-menu:hover .profile img {
-  border-radius: 50%;
-  width: 80%;
-  height: auto;
-  margin: 2rem 0.3rem;
-}
-.menu #nav-menu:hover .profile-info {
-  display: none;
-}
-.menu #nav-menu:hover .nav a h4 {
-  display: none;
+@media (min-width: 920px) {
+  .menu #nav-menu:hover {
+    width: 100%;
+  }
+  .menu #nav-menu:hover .profile {
+    align-items: center;
+  }
+  .menu #nav-menu:hover .profile img {
+    width: 8rem;
+  }
+  .menu #nav-menu:hover .profile-info {
+    display: block;
+    text-align: center;
+  }
+  .menu #nav-menu:hover .profile-info a {
+    color: black;
+    margin-top: 1rem;
+  }
+  .menu #nav-menu:hover .nav {
+    height: 50vh;
+    box-sizing: border-box;
+  }
+  .menu #nav-menu:hover .nav a {
+    display: block;
+    text-decoration: none;
+  }
+  .menu #nav-menu:hover .nav a h4 {
+    display: block;
+  }
+  .menu #nav-menu:hover .nav-item {
+    text-align: center;
+  }
+  .menu #nav-menu:hover .nav-item h4 {
+    margin-top: 1rem;
+  }
+  .menu #nav-menu:hover .nav #nav-item-out-line {
+    margin-top: 9vh;
+  }
 }
 
 /*# sourceMappingURL=style-aside.css.map */
