--- a/styles/sass/mentor-profile.sass
+++ b/styles/sass/mentor-profile.sass
@@ -6,18 +6,48 @@ body
    font-weight: 500
    box-sizing: border-box
 
-   
+main
+   @include responsive-mixin.desktop
+      display: grid
+
+      padding: 0
+        
+        display: grid
+
+        grid-template-columns: 12.8% auto
+        grid-template-rows: auto auto
+        grid-gap: 1rem
+
 .main-header
    .cover-image
       display: none
       @include responsive-mixin.desktop
-         display: inline
+         display: block
+
+         grid-column: 2 / 3
+         grid-rows: 1 / 2
+
+.menu
+        position: absolute
+        top: 0
+
+        @include responsive-mixin.desktop
+            position: relative
+
+            grid-column: 1 / 2
+            grid-row: 1 /3
+
+section
+   height: auto 
+
+   grid-column: 2 / 3
+   grid-row: 2 / 3
+
 
 .mentor-profile
    background-color: #F0EDED
    padding: 7.7rem 3.8rem 4.2rem 3.8rem
    border-radius: 1rem
-   position: relative
    box-sizing: border-box
    width: 343px
    height: 300px
@@ -26,12 +56,12 @@ body
       background-image: url(../../assets/img/profile.jfif)
       background-size: cover
       background-position: center
-      width: 50%
-      border-radius: 50%
+      width: 15rem
       max-width: 15rem
+      border-radius: 50%
       height: 15rem
+      max-height: 15rem
       margin: 2rem
-      position: absolute
       //left: 94px
       top: -98px
 
