--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -11,22 +11,34 @@
     #nav-btn
         width: 7rem
         height: 7rem
+        position: absolute
+        left: 6vw
         
         display: flex
+        flex-direction: column
+        align-items: left
         justify-content: center
 
-        img
-            margin: .4rem
-
+        span
+            width: 32px
+            height: 4px
+            background-color: black
+            margin: 8px
         
+        .line1, .line3
+            width: 50px
+            margin-left: 4px
+
         @include responsive-mixin.desktop
             display: none
-    
+
     #nav-menu
         display: block
         width: 70vw
         background-color: #ccc
         box-sizing: border-box
+        margin-top: 0
+        margin-left: -70vw
 
         display: flex
         flex-direction: column
@@ -68,6 +80,7 @@
 
 
                     // ELEMENTOS DOS MENU
+    
 
         @include responsive-mixin.desktop
             display: block
@@ -168,5 +181,8 @@
                 #nav-item-out-line
                     margin-top: 9vh
 
+    .nav-menu-active
+        transform: translateX(0)
+        
 
                 
